<resources>
    <string name="app_name">Grouper</string>
    <string name="loginTitle">User Name :</string>
    <string name="passwordTitle">Password :</string>
    <string name="loginButton">Log-in</string>
    <string name="createAccountButton">New User?</string>
    <string name="loginErrorString">""</string>

    <string name="newUsernameTitle">"Enter a Username</string>
    <string name="newUserEmailTitle">"Enter an E-mail</string>
    <string name="newPasswordTitle">"Enter a Password"</string>
    <string name="verifPasswordTitle">Re-enter Password</string>
    <string name="submitNewAccountButton">Create Account</string>
    <string name="userAlreadyAccountButton">Already Have Account?</string>
    <string name="action_notification">Notifications</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_address">Task Address</string>
    <string name="task_claimant">Task Claimant</string>
    <string name="group_tasks_item">Tasks</string>
    <string name="group_nav_item">Way-Points</string>
    <string name="group_users_item">Users</string>
    <string name="group_chat_item">Chat</string>
    <string name="complete_task_button">Complete Task</string>
    <string name="claim_task_buton">Claim Task</string>
    <string name="no_groups_available">You are not in any groups</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="title_activity_group_waypoint_display">Map</string>
    <string name="no_tasks_available">No Tasks Available</string>
    <string name="LogoutButton">Logout</string>
    <string name="create_task">Create New Task</string>
    <string name="group_invites">Group Invites</string>
    <string name="invite_from_group">Invited You!</string>
    <string name="no_invites_available">No Invites Available</string>
    <string name="go_to_home">Go Home</string>
</resources>
