<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewAccount">

    <EditText
        android:id="@+id/newUsernameEntry"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/newUsernameTitle"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/newEmailEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newEmailEntry"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/newUserEmailTitle"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/newPasswordEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newPasswordEntry"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/newPasswordTitle"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPassVerifEntry"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/verifPasswordTitle"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submitAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEntry" />

    <Button
        android:id="@+id/submitAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/submitNewAccountButton"
        app:layout_constraintBottom_toTopOf="@+id/haveAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassVerifEntry" />

    <Button
        android:id="@+id/haveAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAlreadyAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitAccountButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haveAccountButton"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="55dp"
        android:text="Welcome!"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/newUsernameEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="186dp"
        android:layout_height="54dp"
        android:text="Let's get you started."
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/newUsernameEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
