<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/createTaskTitleError"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="68dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createTaskDescriptionTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createTaskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/task_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createTaskDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/task_description"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTaskDescriptionTextView" />

    <EditText
        android:id="@+id/createTaskTitle"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/task_title"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTaskTitleTextView" />

    <TextView
        android:id="@+id/taskCreateAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/task_address"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTaskDescription" />

    <EditText
        android:id="@+id/taskCreateAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:hint="@string/task_address"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCreateAddressTextView" />

    <TextView
        android:id="@+id/assignCreateUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="Assign Task to"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCreateAddress" />

    <Spinner
        android:id="@+id/assignCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignCreateUserTextView" />

    <TextView
        android:id="@+id/createTaskDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/task_description"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTaskTitle" />

    <TextView
        android:id="@+id/createDescriptionError"
        android:layout_width="2dp"
        android:layout_height="16dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="69dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createTaskTitleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="Save Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelTaskCreate"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>